Fix footer gap for different screen sizes

--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -9,7 +9,7 @@
 
     @media only screen and (min-width: sizing.$mobile-width-threshold) {
         display: flex;
-        gap: 10rem;
+        gap: 10%;
     }
 
     .footer-group {
